--- a/QuestionView.html
+++ b/QuestionView.html
@@ -36,22 +36,22 @@
 					<br><br><br>
 					<form action="">
 						<div class="options">
-							<input type="radio" name="gender" value="male"> 
+							<input type="radio" name="gender" value="male">
 							B can do the same work in 6 days.A can do the work in 3 days. B can do the same work in 6 days.
 						</div>
 						<div class="options">
-							<input type="radio" name="gender" value="male"> 
+							<input type="radio" name="gender" value="male">
 							B can do the same work in 6 days.A can do the work in 3 days. B can do the same work in 6 days.
 						</div>
 						<div class="options">
-							<input type="radio" name="gender" value="male"> 
+							<input type="radio" name="gender" value="male">
 							B can do the same work in 6 days.A can do the work in 3 days. B can do the same work in 6 days.
 						</div>
 						<div class="options">
-							<input type="radio" name="gender" value="male"> 
+							<input type="radio" name="gender" value="male">
 							B can do the same work in 6 days.A can do the work in 3 days. B can do the same work in 6 days.
 						</div>
-					
+
 				</div>
 				<div class="bottomGrayBar">
 					<div class="ui grid">
@@ -77,7 +77,7 @@
             			</div>
             		</div>
 				</div>
-				</form>	
+				</form>
 			</div>
 		</div>
 
@@ -144,12 +144,46 @@
           			</a>
           			<br>
           			<br>
-          			<a href="#">Instructions</a>
+          			<a href="#" onclick="$('.ui.modal.inst') .modal('show');">Instructions</a>
+								<div class="ui modal inst">
+								  <div class="header">
+								    Instructions
+								  </div>
+								  <div class="image content">
+								    <div class="description">
+								      <div class="ui header">Here are your instructions.</div>
+								      <p>1. Cheating is fine unless you get caught.</p>
+								    </div>
+								  </div>
+								  <div class="actions">
+								    <div class="ui positive right labeled icon button">
+								      Yep, got it!
+								      <i class="checkmark icon"></i>
+								    </div>
+								  </div>
+								</div>
           			<br>
-          			<a href="#">View Question Paper</a>
+          			<a href="#" onclick="$('.ui.modal.ques') .modal('show');">View Question Paper</a>
+								<div class="ui modal ques">
+								  <div class="header">
+								    Question Paper at a glance
+								  </div>
+								  <div class="image content">
+								    <div class="description">
+								      <div class="ui header">Here is your entire question paper.</div>
+								      <p>1. Why is cheating fine unless you get caught?</p>
+								    </div>
+								  </div>
+								  <div class="actions">
+								    <div class="ui positive right labeled icon button">
+								      Yep, got it!
+								      <i class="checkmark icon"></i>
+								    </div>
+								  </div>
+								</div>
           		</div>
 			</div>
-		</div>	
-	</div>	
+		</div>
+	</div>
 </body>
 </html>
