--- a/QuestionView.html
+++ b/QuestionView.html
@@ -94,11 +94,11 @@
 					<p>00:59:36</p>
 				</div>
 				<div class="grid-container">
-					 <div class="grid-item"style="background-color: #f0f976;">1</div>
-					 <div class="grid-item"style="background-color: #f0f976;">1</div>
-					 <div class="grid-item"style="background-color: #f97796;">1</div>
-					 <div class="grid-item"style="background-color: #f0f976;">1</div>
-					 <div class="grid-item"style="background-color: #f97796;">1</div>
+					 <div class="grid-item"style="background-color: #32cd32;">1</div>
+					 <div class="grid-item"style="background-color: #32cd32;">1</div>
+					 <div class="grid-item"style="background-color: #ff7f50;">1</div>
+					 <div class="grid-item"style="background-color: #ff7f50;">1</div>
+					 <div class="grid-item"style="background-color: #32cd32;">1</div>
 
 					 <div class="grid-item">1</div>
 					 <div class="grid-item">1</div>
@@ -106,20 +106,20 @@
 					 <div class="grid-item">1</div>
 					 <div class="grid-item">1</div>
 
-					 <div class="grid-item" style="background-color: #93f993;">1</div>
+					 <div class="grid-item" style="background-color: #ff7f50;">1</div>
 					 <div class="grid-item">1</div>
 					 <div class="grid-item">1</div>
 					 <div class="grid-item">1</div>
 					 <div class="grid-item">1</div>
 
 					 <div class="grid-item">1</div>
-					 <div class="grid-item"style="background-color: #f97796;">1</div>
-					 <div class="grid-item"style="background-color: #93f993;">1</div>
+					 <div class="grid-item"style="background-color: #32cd32;">1</div>
+					 <div class="grid-item"style="background-color: #32cd32;">1</div>
 					 <div class="grid-item">1</div>
 					 <div class="grid-item">1</div>
 
 					 <div class="grid-item">1</div>
-					 <div class="grid-item"style="background-color: #f0f976;">1</div>
+					 <div class="grid-item"style="background-color: #ff7f50;">1</div>
 					 <div class="grid-item">1</div>
 					 <div class="grid-item">1</div>
 					 <div class="grid-item">1</div>
