radio buttons changed
Changed the radio buttons to contain option number.

--- a/QuestionView.html
+++ b/QuestionView.html
@@ -35,20 +35,20 @@
 					A can do the work in 3 days. B can do the same work in 6 days.A can do the work in 3 days. B can do the same work in 6 days.A can do the work in 3 days. B can do the same work in 6 days.
 					<br><br><br>
 					<form action="">
-						<div class="options">
-							<input type="radio" name="gender" value="male">
+						<div class="options boxed">
+							<input type="radio" id="a" name="gender" value="male"><label for="a" class="ui label big" style="background-color: white;">A</label>
 							B can do the same work in 6 days.A can do the work in 3 days. B can do the same work in 6 days.
 						</div>
-						<div class="options">
-							<input type="radio" name="gender" value="male">
+						<div class="options boxed">
+							<input type="radio" id="b" name="gender" value="male"><label for="b" class="ui label big" style="background-color: white;">B</label>
 							B can do the same work in 6 days.A can do the work in 3 days. B can do the same work in 6 days.
 						</div>
-						<div class="options">
-							<input type="radio" name="gender" value="male">
+						<div class="options boxed">
+							<input type="radio" id="c" name="gender" value="male"><label for="c" class="ui label big" style="background-color: white;">C</label>
 							B can do the same work in 6 days.A can do the work in 3 days. B can do the same work in 6 days.
 						</div>
-						<div class="options">
-							<input type="radio" name="gender" value="male">
+						<div class="options boxed">
+							<input type="radio" id="d" name="gender" value="male"><label for="d" class="ui label big" style="background-color: white;">D</label>
 							B can do the same work in 6 days.A can do the work in 3 days. B can do the same work in 6 days.
 						</div>
 
