--- a/QuestionView.html
+++ b/QuestionView.html
@@ -9,11 +9,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
 </head>
 <body>
-	<div class="ui grid">
+	<div class="ui stackable grid">
 		<div class="twelve wide column">
 			<div class="question">
 				<div class="grayBar">
-					<div class="ui grid">
+					<div class="ui stackable grid">
 						<div class="ten wide column">
 							<div class="ui big breadcrumb">
 								<a class="section">TEST SERIES</a>
@@ -30,14 +30,16 @@
             		</div>
 				</div>
 				<div class="questionAsked">
+					<div class="Question">
 					A can do the work in 3 days. B can do the same work in 6 days. A can do the work in 3 days. B can do the same work in 6 days.
 					A can do the work in 3 days. B can do the same work in 6 days.
 					A can do the work in 3 days. B can do the same work in 6 days.A can do the work in 3 days. B can do the same work in 6 days.A can do the work in 3 days. B can do the same work in 6 days.
-					<br><br><br>
+					</div>
 					<form action="">
 						<div class="options boxed">
-							<input type="radio" id="a" name="gender" value="male"><label for="a" class="ui label big" style="background-color: white;">A</label>
-							B can do the same work in 6 days.A can do the work in 3 days. B can do the same work in 6 days.
+							<input type="radio" id="a" name="gender" value="male">
+							<label for="a" class="ui label big" style="background-color: white;">A</label>
+								B can do the same work in 6 days.A can do the work in 3 days. B can do the same work in 6 days.
 						</div>
 						<div class="options boxed">
 							<input type="radio" id="b" name="gender" value="male"><label for="b" class="ui label big" style="background-color: white;">B</label>
@@ -95,8 +97,8 @@
 				</div>
 				<div class="grid-container">
 					 <div class="grid-item"style="background-color: #32cd32;">1</div>
-					 <div class="grid-item"style="background-color: #32cd32;">2</div>
-					 <div class="grid-item"style="background-color: #ff7f50;">3</div>
+					 <div class="grid-item"style="background-color: #32cd32;">1</div>
+					 <div class="grid-item"style="background-color: #ff7f50;">1</div>
 					 <div class="grid-item"style="background-color: #ff7f50;">1</div>
 					 <div class="grid-item"style="background-color: #32cd32;">1</div>
 
