Updated stats page

--- a/QuestionView-cdm.html
+++ b/QuestionView-cdm.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
     <title>Question 1</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
-    <link rel="stylesheet" href="style1-cdm.css"/>
+    <!-- <link rel="stylesheet" href="style1-cdm.css"/> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
 </head>
