--- a/Statistics-cdm.html
+++ b/Statistics-cdm.html
@@ -4,17 +4,17 @@
 	<meta charset="utf-8" />
     <title>Statistics</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
-    <link rel="stylesheet" href="styleStats-cdm.css"/>
+    <!-- <link rel="stylesheet" href="styleStats-cdm.css"/> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
 </head>
 <body>
-<div class="ui stackable grid">
+<!-- <div class="ui stackable grid">
 	<div class="two wide column">
 		<div class="adminPanel">
 
 		</div>
-	</div>
+	</div> -->
 
 	<div class="fourteen wide column">
 		<div class="ui stackable grid">
